--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'de.ugoe.cs'
 version '1.0.0'
 
 apply plugin: 'jacoco'
-apply plugin: 'findbugs'
+//apply plugin: 'com.github.spotbugs.SpotBugsTask'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'checkstyle'
 apply plugin: 'java'
@@ -41,7 +41,7 @@ dependencies {
     compile group:"com.fasterxml.jackson.core", name:"jackson-databind", version: jacksonVersion
     compile group:"com.fasterxml.jackson.core", name:"jackson-annotations", version: jacksonVersion
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1u2'
+    //compile group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1u2'
     compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.1'
     compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.2'
     compile group: 'com.github.danielfelgar', name: 'morphia-logging-log4j2', version: '1.0.1'
@@ -52,9 +52,13 @@ dependencies {
     compile group: 'org.jacoco', name: 'org.jacoco.report', version: jacocoVersion
     compile group: 'com.github.javaparser', name:'javaparser-core', version: '3.5.7'
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.10.0.201712302008-r'
-    compile group: 'de.ugoe.cs', name: 'jSHARK', version: '2.+'
+    compile group: 'io.github.smartshark', name: 'jSHARK', version: '2.+'
     compile group: 'de.ugoe.cs', name: 'changeSHARK', version: '2.+'
     compile group: 'org.apache.maven.shared', name: 'maven-invoker', version: '3.0.0'
+
+
+    compileOnly 'com.google.code.findbugs:annotations:3.0.1'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
 }
 
 shadowJar {
@@ -81,10 +85,10 @@ jacocoTestReport {
     }
 }
 
-findbugs {
-    sourceSets = [sourceSets.main]
-    ignoreFailures = false
-}
+//findbugs {
+//   sourceSets = [sourceSets.main]
+//   ignoreFailures = false
+//}
 
 checkstyle {
     toolVersion = "8.7"
@@ -95,9 +99,9 @@ checkstyleMain {
     ignoreFailures = false
 }
 
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled false
-        html.enabled true
-    }
-}
+//tasks.withType(FindBugs) {
+//    reports {
+//        xml.enabled false
+//        html.enabled true
+//    }
+//}
